Bug 517717 - New text tool cursor displaying wrong when writing mode set to vertical-rl
Summary: New text tool cursor displaying wrong when writing mode set to vertical-rl
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 5.3.0-beta3
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-17 21:39 UTC by thetotalminecraftian
Modified: 2026-07-06 18:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full screenshot of krita window showing a cursor editing vertical chinese text (630.64 KB, image/png)
2026-03-17 21:39 UTC, thetotalminecraftian
Details
attachment-3992942-0.html (1.88 KB, text/html)
2026-03-18 10:20 UTC, thetotalminecraftian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetotalminecraftian 2026-03-17 21:39:09 UTC
Created attachment 190745 [details]
Full screenshot of krita window showing a cursor editing vertical chinese text

SUMMARY

Using the new text tool, when the Writing Mode property is added and set to "Vertical, Right to Left", the cursor on the page is rendered extremely malformed, which makes the text difficult to edit.

STEPS TO REPRODUCE
1. Create text using the text tool
2. Type any text, english or CJK works
3. Open the text properties tool window, and add the "Writing Mode" property
4. Set it to vertical-rl
5. Note that the cursor is rendered diagonally in a strange way (this only happens when the text field is non-empty)

OBSERVED RESULT

The cursor is rendered far larger than the bounds of the text box, in a slanted diagonal, and hence does not indicate position

EXPECTED RESULT

The text cursor should be horizontal at the correct position

SOFTWARE/OS VERSIONS
Windows: 10
Qt Version: 5

ADDITIONAL INFORMATION
Comment 1 wolthera 2026-03-17 21:47:24 UTC
Can you share the font with me? I've tested vertical text endlessly, so my suspicion is that there's something odd with the font.
Comment 2 thetotalminecraftian 2026-03-18 10:20:25 UTC
Created attachment 190759 [details]
attachment-3992942-0.html

Sure, it's 京華老宋体 KingHwa_OldSong

The official download for it is in this zhihu post

https://zhuanlan.zhihu.com/p/677725322

Jun



On Tue, 17 Mar 2026, 22:14 wolthera, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=517717
>
> wolthera <griffinvalley@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|REPORTED                    |NEEDSINFO
>                  CC|                            |griffinvalley@gmail.com
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from wolthera <griffinvalley@gmail.com> ---
> Can you share the font with me? I've tested vertical text endlessly, so my
> suspicion is that there's something odd with the font.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 wolthera 2026-03-18 11:00:42 UTC
Ok, I can reproduce. I'll have to see what causes it.
Comment 4 wolthera 2026-07-06 18:30:51 UTC
Git commit 23c976ecd28fc526fefae1c69bcc83343e122a65 by Wolthera van Hövell, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:30.
Pushed by woltherav into branch 'master'.

Force non-var vertical metrics to use default vertical caret.

Some of these fonts have nonsense values for the vertical caret,
so we just disable it. Variable fonts are probably modern enough
that they don't have this issue.

M  +7    -0    libs/flake/text/KoFontRegistry.cpp

https://invent.kde.org/graphics/krita/-/commit/23c976ecd28fc526fefae1c69bcc83343e122a65
Comment 5 wolthera 2026-07-06 18:33:52 UTC
Git commit 7ddf6d938dcbc44adf7572a342f12e0eeb1be4f9 by Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:32.
Pushed by woltherav into branch 'krita/6.0'.

Force non-var vertical metrics to use default vertical caret.

Some of these fonts have nonsense values for the vertical caret,
so we just disable it. Variable fonts are probably modern enough
that they don't have this issue.

M  +7    -0    libs/flake/text/KoFontRegistry.cpp

https://invent.kde.org/graphics/krita/-/commit/7ddf6d938dcbc44adf7572a342f12e0eeb1be4f9