Force non-var vertical metrics to use default vertical caret.

Some of these fonts have nonsense values for the vertical caret,
so we just disable it. Variable fonts are probably modern enough
that they don't have this issue.

BUG:517717